// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Revolut Exchange screen App tests should fetch latest rates for currencies in user wallet: state diff 1`] = `
Object {
  "calculator": Object {
    "currencyFrom": "GBP",
    "currencyTo": "EUR",
  },
  "currencies": Object {
    "rates": Object {
      "0": Object {
        "currency": "EUR",
        "rates": Object {
          "AUD": 1.6246,
          "BGN": 1.9558,
          "BRL": 4.5291,
          "CAD": 1.4679,
          "CHF": 1.1025,
          "CNY": 7.8417,
          "CZK": 25.807,
          "DKK": 7.4688,
          "GBP": 0.87518,
          "HKD": 8.6614,
          "HRK": 7.428,
          "HUF": 331.71,
          "IDR": 15601.55,
          "ILS": 3.8673,
          "INR": 78.4875,
          "ISK": 137.7,
          "JPY": 119.75,
          "KRW": 1308.61,
          "MXN": 21.3965,
          "MYR": 4.622,
          "NOK": 10.0375,
          "NZD": 1.7419,
          "PHP": 56.927,
          "PLN": 4.3057,
          "RON": 4.7573,
          "RUB": 70.8034,
          "SEK": 10.8448,
          "SGD": 1.5177,
          "THB": 33.642,
          "TRY": 6.4713,
          "USD": 1.1043,
          "ZAR": 16.3978,
        },
      },
      "1": Object {
        "currency": "GBP",
        "rates": Object {
          "AUD": 1.8563038461,
          "BGN": 2.234740282,
          "BRL": 5.1750497041,
          "CAD": 1.6772549647,
          "CHF": 1.2597408533,
          "CNY": 8.9600996366,
          "CZK": 29.4876482552,
          "DKK": 8.5340158596,
          "EUR": 1.1426220892,
          "GBP": 1,
          "HKD": 9.8967069631,
          "HRK": 8.4873968784,
          "HUF": 379.0191731987,
          "IDR": 17826.6756552938,
          "ILS": 4.4188624054,
          "INR": 89.6815512237,
          "ISK": 157.3390616787,
          "JPY": 136.8289951781,
          "KRW": 1495.2466921091,
          "MXN": 24.4481135309,
          "MYR": 5.2811992961,
          "NOK": 11.46906922,
          "NZD": 1.9903334171,
          "PHP": 65.0460476702,
          "PLN": 4.9197879293,
          "RON": 5.4357960648,
          "RUB": 80.9015288284,
          "SEK": 12.3915080326,
          "SGD": 1.7341575447,
          "THB": 38.4400923239,
          "TRY": 7.3942503256,
          "USD": 1.2617975731,
          "ZAR": 18.7364884938,
        },
      },
      "2": Object {
        "currency": "USD",
        "rates": Object {
          "AUD": 1.4711581998,
          "BGN": 1.7710767002,
          "BRL": 4.10133116,
          "CAD": 1.3292583537,
          "CHF": 0.9983700081,
          "CNY": 7.1010594947,
          "CZK": 23.3695553744,
          "DKK": 6.7633795164,
          "EUR": 0.9055510278,
          "GBP": 0.7925201485,
          "HKD": 7.8433396722,
          "HRK": 6.7264330345,
          "HUF": 300.3803314317,
          "IDR": 14127.9996377796,
          "ILS": 3.5020374898,
          "INR": 71.0744362945,
          "ISK": 124.6943765281,
          "JPY": 108.4397355791,
          "KRW": 1185.0131304899,
          "MXN": 19.3756225663,
          "MYR": 4.1854568505,
          "NOK": 9.0894684415,
          "NZD": 1.5773793353,
          "PHP": 51.5503033596,
          "PLN": 3.8990310604,
          "RON": 4.3079779046,
          "RUB": 64.1160916418,
          "SEK": 9.8205197863,
          "SGD": 1.3743547949,
          "THB": 30.4645476773,
          "TRY": 5.8600923662,
          "USD": 1,
          "ZAR": 14.8490446437,
        },
      },
      "3": Object {
        "currency": "PLN",
        "rates": Object {
          "AUD": 0.3773137933,
          "BGN": 0.4542350837,
          "BRL": 1.051884711,
          "CAD": 0.3409201756,
          "CHF": 0.2560559259,
          "CNY": 1.821236965,
          "CZK": 5.9936827926,
          "DKK": 1.7346308382,
          "EUR": 0.2322502729,
          "GBP": 0.2032607938,
          "HKD": 2.0116125136,
          "HRK": 1.7251550271,
          "HUF": 77.0397380217,
          "IDR": 3623.4642450705,
          "ILS": 0.8981814804,
          "INR": 18.2287432938,
          "ISK": 31.9808625775,
          "JPY": 27.8119701791,
          "KRW": 303.9250296119,
          "MXN": 4.969342964,
          "MYR": 1.0734607613,
          "NOK": 2.3312121142,
          "NZD": 0.4045567504,
          "PHP": 13.221311285,
          "PLN": 1,
          "RON": 1.1048842232,
          "RUB": 16.4441089718,
          "SEK": 2.5187077595,
          "SGD": 0.3524862392,
          "THB": 7.8133636807,
          "TRY": 1.502961191,
          "USD": 0.2564739764,
          "ZAR": 3.8083935249,
        },
      },
    },
  },
  "wallet": Object {
    "defaultCurrency": "EUR",
    "userDefaultCurrency": "GBP",
    "userWallet": Object {
      "0": Object {
        "availableMoney": 35000.25,
        "currency": "EUR",
        "symbol": "€",
      },
      "1": Object {
        "availableMoney": 980,
        "currency": "GBP",
        "symbol": "£",
      },
      "2": Object {
        "availableMoney": 10000.5,
        "currency": "USD",
        "symbol": "$",
      },
      "3": Object {
        "availableMoney": 5500,
        "currency": "PLN",
        "symbol": "zł",
      },
    },
  },
}
`;

exports[`Revolut Exchange screen App tests should fetch user wallet: fecthing wallet complete 1`] = `
Object {
  "calculator": Object {
    "currencyFrom": "GBP",
    "currencyTo": "EUR",
  },
  "currencies": Object {
    "rates": Object {
      "0": Object {
        "currency": "EUR",
      },
      "1": Object {
        "currency": "GBP",
      },
      "2": Object {
        "currency": "USD",
      },
      "3": Object {
        "currency": "PLN",
      },
    },
  },
  "wallet": Object {
    "defaultCurrency": "EUR",
    "userDefaultCurrency": "GBP",
    "userWallet": Object {
      "0": Object {
        "availableMoney": 35000.25,
        "currency": "EUR",
        "symbol": "€",
      },
      "1": Object {
        "availableMoney": 980,
        "currency": "GBP",
        "symbol": "£",
      },
      "2": Object {
        "availableMoney": 10000.5,
        "currency": "USD",
        "symbol": "$",
      },
      "3": Object {
        "availableMoney": 5500,
        "currency": "PLN",
        "symbol": "zł",
      },
    },
  },
}
`;

exports[`Revolut Exchange screen App tests should fetch user wallet: started fetching wallet 1`] = `Object {}`;

exports[`Revolut Exchange screen App tests should fetch user wallet: state diff 1`] = `
Object {
  "calculator": Object {
    "currencyFrom": "GBP",
    "currencyTo": "EUR",
  },
  "currencies": Object {
    "rates": Object {
      "0": Object {
        "currency": "EUR",
      },
      "1": Object {
        "currency": "GBP",
      },
      "2": Object {
        "currency": "USD",
      },
      "3": Object {
        "currency": "PLN",
      },
    },
  },
  "wallet": Object {
    "defaultCurrency": "EUR",
    "userDefaultCurrency": "GBP",
    "userWallet": Object {
      "0": Object {
        "availableMoney": 35000.25,
        "currency": "EUR",
        "symbol": "€",
      },
      "1": Object {
        "availableMoney": 980,
        "currency": "GBP",
        "symbol": "£",
      },
      "2": Object {
        "availableMoney": 10000.5,
        "currency": "USD",
        "symbol": "$",
      },
      "3": Object {
        "availableMoney": 5500,
        "currency": "PLN",
        "symbol": "zł",
      },
    },
  },
}
`;

exports[`Revolut Exchange screen App tests should get latest rates for selected currency: fecthing rates complete 1`] = `
Object {
  "currencies": Object {
    "fetchingExchangeRates": false,
  },
}
`;

exports[`Revolut Exchange screen App tests should get latest rates for selected currency: started fetching rates 1`] = `
Object {
  "currencies": Object {
    "fetchingExchangeRates": true,
  },
}
`;

exports[`Revolut Exchange screen App tests should get latest rates for selected currency: state diff 1`] = `Object {}`;
